--- a/css/bos-spectacular-site-0e5bc7.webflow.css
+++ b/css/bos-spectacular-site-0e5bc7.webflow.css
@@ -5082,10 +5082,11 @@ blockquote {
   .subscription__wrapper {
     height: 100%;
     padding-top: 205px;
-    padding-bottom: 170px;
+    padding-bottom: 0px;
   }
 
   .heading-7 {
+    margin-bottom: 31px;
     font-size: 7em;
   }
 
@@ -5137,11 +5138,19 @@ blockquote {
   }
 
   .our__story.our--story.is--desktop {
-    padding-bottom: 52.14em;
+    padding-bottom: 5.84em;
   }
 
   .our__story__heading {
     font-size: 7em;
+  }
+
+  .visual__image {
+    display: none;
+  }
+
+  .visual__image.resize {
+    display: none;
   }
 
   .visuals__one {
@@ -5221,6 +5230,10 @@ blockquote {
     transform: translate(-25vw, 0px) rotate(-6deg);
   }
 
+  .header__navigation {
+    display: block;
+  }
+
   .header__navigation__menu__links {
     width: 70%;
   }
@@ -5228,6 +5241,10 @@ blockquote {
   .nav__menu__photo__mask {
     width: 32vh;
     height: 45vh;
+  }
+
+  .nav__menu__photo__mask.nav-menu-photo-mask-1 {
+    margin-top: 0px;
   }
 
   .footer__grid {
@@ -5272,6 +5289,11 @@ blockquote {
 }
 
 @media screen and (max-width: 767px) {
+  .image.is--strawberry {
+    margin-right: 0px;
+    padding-right: 0px;
+  }
+
   .rotate__images__wrapper__1 {
     right: 16vw;
   }
@@ -5365,6 +5387,10 @@ blockquote {
     padding-bottom: 72px;
   }
 
+  .header__navigation {
+    display: block;
+  }
+
   .nav__menu__link__text {
     -webkit-box-pack: center;
     -webkit-justify-content: center;
@@ -5373,6 +5399,13 @@ blockquote {
     font-size: 18vmin;
     line-height: 1.3;
     text-align: center;
+  }
+
+  .nav__hamburger {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
   }
 
   .nav-menu-footer {
@@ -5465,6 +5498,8 @@ blockquote {
   }
 
   .image.is--blood--orange {
+    margin-top: 3px;
+    margin-left: 40px;
     -o-object-fit: cover;
     object-fit: cover;
   }
@@ -6071,6 +6106,7 @@ blockquote {
   }
 
   .heading-7 {
+    margin-bottom: 60px;
     font-size: 4em;
     line-height: 1em;
   }
@@ -6135,6 +6171,7 @@ blockquote {
   }
 
   .our__story__text__paragraph {
+    padding-bottom: 16px;
     font-size: 16px;
   }
 
@@ -6156,11 +6193,16 @@ blockquote {
     padding-left: 0px;
   }
 
+  .visual__wrapper {
+    display: none;
+  }
+
   .visuals__two {
     left: auto;
     top: auto;
     right: 0%;
     bottom: 14%;
+    display: none;
     width: 15em;
     height: 12em;
     max-height: 44.27em;
@@ -6179,7 +6221,7 @@ blockquote {
   .our__story.our--story.is--mobile {
     display: block;
     height: 100%;
-    padding: 73px 0em 9.6em;
+    padding: 73px 0em 0em;
   }
 
   .our__story__heading {
@@ -6190,6 +6232,7 @@ blockquote {
     display: block;
     height: 100%;
     min-height: 0px;
+    margin-bottom: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
     -webkit-box-pack: center;
@@ -6210,6 +6253,14 @@ blockquote {
 
   .our__story__text {
     font-size: 25px;
+  }
+
+  .visual__image {
+    display: none;
+  }
+
+  .visual__image.resize {
+    display: none;
   }
 
   .visuals__one {
@@ -6299,6 +6350,7 @@ blockquote {
 
   .header__navigation {
     z-index: 444;
+    display: none;
   }
 
   .nav__menu__link__text {
@@ -6584,6 +6636,13 @@ blockquote {
 
   .div-block-68 {
     padding-left: 14px;
+  }
+
+  .image-34 {
+    position: absolute;
+    margin-top: 129px;
+    margin-right: 0px;
+    margin-left: 177px;
   }
 }
 
